# django-allauth-webauthn

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  LICENSE  README.rst  TODO  mypy.ini  pyproject.toml
.github/workflows/: code-coverage.yml  publish-testpypi.yml  publish.yml  pull-request.yml
demo/demo/: asgi.py  settings.py  urls.py  views.py  wsgi.py
demo/templates/: home.html
django_allauth_webauthn/: adapter.py  admin.py  app_settings.py  models.py  urls.py  utils.py  views.py
django_allauth_webauthn/migrations/: 0001_initial.py
django_allauth_webauthn/templates/django_allauth_webauthn/: login-script.html  login.html  register-script.html
docs/: Makefile  conf.py  configuration.rst  index.rst  installation.rst
docs/_ext/: djangodocs.py
tests/: settings.py  test_webauthn.py  urls.py
tests/templates/: alternative_login.html
